Fix failing Travis CI Tests